add basic recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">ClassApp</string>
     <string name="hello_world">Hello, World!</string>
+    <string name="a_picture_of_a_character_in_rick_and_morty">a picture of a character in rick and morty</string>
+    <string name="name">Name: %s</string>
+    <string name="age">Age: %d</string>
 </resources>
