--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="a_picture_of_a_character_in_rick_and_morty">a picture of a character in rick and morty</string>
     <string name="name">Name: %s</string>
     <string name="age">Age: %d</string>
+    <string name="an_unknown_error_occurred">An unknown error occurred.</string>
 </resources>
